Fixed: Misaligned table border
Closes #5456

--- a/frontend/src/Episode/Summary/EpisodeFileRow.css
+++ b/frontend/src/Episode/Summary/EpisodeFileRow.css
@@ -20,7 +20,5 @@
 .actions {
   composes: cell from '~Components/Table/Cells/TableRowCell.css';
 
-  display: flex;
-  justify-content: flex-end;
   width: 55px;
 }
